fix profiles column, last Event now visible in Table even if custom, better filter, experimenting with colors

--- a/src/components/TypeIcon/TypeIcon.module.scss
+++ b/src/components/TypeIcon/TypeIcon.module.scss
@@ -4,7 +4,6 @@
     justify-content: center;
     border-radius: var(--radius-m);
     padding: var(--spacing-s);
-    align-self: stretch;
     flex-shrink: 0;
     aspect-ratio: 1 / 1;
 }
